Correct repository name of docker hub

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            netivism/${{ github.repository }}
+            ${{ github.repository }}
             ghcr.io/${{ github.repository }}
 
 
