--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['master','8.2','8.1','8.0','7.4','7.3']
+    branches: ['master','8.2','8.1','8.0','7.4','7.3','develop']
   workflow_dispatch:
 
 jobs:
