--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,7 +2,7 @@ name: Create and publish a Docker image
 
 on:
   push:
-    branches: ['master','8.2','8.1','8.0','7.4','7.3','develop']
+    branches: ['master','8.2','8.1','8.0','7.4','7.3','7.2','develop']
   workflow_dispatch:
 
 jobs:
@@ -15,6 +15,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Log in to NETivism Registry
+        uses: docker/login-action@v2
+        with:
+          registry: rg.netivism.com.tw
+          username: ${{ secrets.NETIVISM_REGISTRY_USER }}
+          password: ${{ secrets.NETIVISM_REGISTRY_PASS }}
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -36,6 +43,7 @@ jobs:
           images: |
             ${{ github.repository }}
             ghcr.io/${{ github.repository }}
+            rg.netivism.com.tw/${{ github.repository }}
 
 
       - name: Build and push Docker image
@@ -45,4 +53,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
